dropdowns: center alignment + fixed closing behavior

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -22,3 +22,7 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
+
+ul.dropdown-menu > li {
+  text-align: center;
+}
